Fix crash when closing main window while prompted for root password.

BUG: 451572